# Chikara

./: .gitignore  .gitmodules  Chikara.sln  LICENSE  README.md
Chikara/: CMakeLists.txt  Chikara.vcxproj  Chikara.vcxproj.filters  Config.cpp  Config.h  CustomList.h  GlobalTime.cpp  GlobalTime.h  KDMAPI.cpp  KDMAPI.h  Licenses.h  LinkedList.h  Main.cpp  Main.h  Midi.cpp  Midi.h  Misc.cpp  Misc.h  NoteRender.cpp  NoteRender.h  Platform.h  PlatformWin.cpp  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h  packages.config
Chikara/Shaders/: README.md  compile_shaders.bat  frag.spv  notes.frag  notes.geom  notes.vert  notes_g.h  notes_g.spv  test.vert  triangle.frag  triangle.vert  vert.spv
Shaders/: vert.spv
